2009-11-19  Eric Z. Ayers  <zundel@google.com>

Reviewed by Pavel Feldman.

        Updated timeline paint test to ignore width and height.  GTK+ testing
        uses a different top level window size than other platforms.

        https://bugs.webkit.org/show_bug.cgi?id=31402

        * inspector/timeline-paint-expected.txt:
        * inspector/timeline-test.js:
        * platform/win/Skipped:
2009-11-19  Eric Z. Ayers  <zundel@google.com>

        Reviewed by Pavel Feldman.

        Forces a WM_PAINT event on calling layoutTestController.display()
        in order to enable the timeline-paint.html test on Windows.
        ::UpdateWindow() does not force an event becaue the window is
        not visible.

        https://bugs.webkit.org/show_bug.cgi?id=31402

        * DumpRenderTree/win/DumpRenderTree.cpp:
        (displayWebView):

Canonical link: https://commits.webkit.org/42625@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@51196 268f45cc-cd09-0410-ab3c-d52691b4dbfc